fixed the width for pages on small screens.

--- a/src/styles.css
+++ b/src/styles.css
@@ -241,6 +241,8 @@ main {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+  }
+  .outer {
     width: min-content;
   }
   .instructions {
